# ip-please

./: .gitignore  .pylintrc  README.md  ip-please.service  ippls.service  pyproject.toml
.github/workflows/: pythonapp.yml
src/: app.py  ip_please.py  ippls.py  wsgi.py
src/static/css/: stylesheet.css
src/templates/: index.html
