[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ip-please"
version = "1.4"
description = "An extremely basic Flask-based remote-IP API"
readme= "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Martijn", email = "martijn@mrtijn.nl" }
]
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3"
]
dependencies = [
    "Flask>=1.1.1"
]
requires-python = ">=3.7"

[project.optional-dependencies]
lint = [
    "pylint"
]

[project.urls]
"Homepage" = "https://github.com/m-rtijn/ip-please"
"Bug Tracker" = "https://github.com/m-rtijn/ip-please/issues"
"Demo" = "https://zandkoek.mrtijn.nl/ip-please"
